--- a/client/src/form.css
+++ b/client/src/form.css
@@ -22,7 +22,7 @@ legend {
 .form__container {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-5);
+  gap: var(--spacing-3);
 }
 
 .form__row {
@@ -57,7 +57,7 @@ form select,
 .stolteInputClassName form select {
   width: 100%;
   box-sizing: border-box;
-  height: var(--spacing-6);
+  height: var(--spacing-4);
   padding: 0 var(--spacing-1);
   outline: none;
   border: 1px solid var(--color-tertiary);
@@ -136,7 +136,7 @@ form select[data-option]:not([data-option='']) + label {
   top: -0.8rem;
   font-size: 0.8rem;
   pointer-events: initial;
-  background-color: white;
+  background-color: var(--color-paper);
   color: var(--color-primary);
 }
 
@@ -153,7 +153,7 @@ form input[type='submit'] {
 
 .stolteDropdownClassName {
   z-index: 2;
-  background-color: white;
+  background-color: var(--color-paper);
   border: 1px solid var(--color-primary);
   border-top: none !important;
   border-radius: var(--spacing-1);
@@ -325,7 +325,7 @@ form .radioSelect [type='radio']:checked ~ .radio_option {
   position: relative;
   cursor: pointer;
   transition: background-color 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 0 0 50px #477a85;
+  /* box-shadow: 0 0 50px #477a85; */
 }
 
 .switch + label::after {
@@ -341,7 +341,7 @@ form .radioSelect [type='radio']:checked ~ .radio_option {
 }
 
 .switch:checked + label {
-  background-color: var(--color-tertiary);
+  background-color: var(--color-secondary);
 }
 
 .switch:checked + label:after {
@@ -370,7 +370,7 @@ form .radioSelect [type='radio']:checked ~ .radio_option {
 .buttongroup .button label span {
   text-align: center;
   padding: var(--spacing-1) var(--spacing-3);
-  background-color: white;
+  background-color: var(--color-paper);
   display: block;
   cursor: pointer;
 }
